se agregaron tests para el coverage